# handler

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .mise.toml  Dockerfile  Dockerfile.control  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  mise.toml  pyproject.toml
.github/workflows/: docker-control.yml  docker.yml  mobile-release.yml  test.yml
app/: App.tsx  README.md  app.json  package-lock.json  package.json
chats/: chat1.md
docs/: PLAN.md
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  (+2 more)
project/: .thumbnail  HANDOFF.md  Handler Mobile.dc.html
scripts/: validate_claude_headless.sh
tests/: conftest.py  test_api_auth.py  test_api_interaction.py  test_api_login.py  test_api_projects_agents.py  test_api_shared.py  test_api_ui.py  test_api_web_management.py  test_claude_config.py  test_claude_management.py  test_cli_phase2.py  test_control_login.py  test_control_spawn.py  test_control_spawn_forge.py  test_credentials.py  test_credentials_hosts.py  test_credsync.py  test_db_types.py  test_db_upsert.py  test_git_servers.py  test_headless_parser.py  test_headless_run.py  test_hook_checkpoint.py  test_hook_dispatch.py  test_hook_gate.py  test_hook_gate_approval.py  test_hook_notify.py  test_integration_web_spawn.py  test_mise.py  test_poller.py  test_project_from_server.py  test_reaper.py  test_repository.py  test_repository_phase2.py  test_repository_runs.py  test_repository_web.py  test_reposync_git.py  test_schedules.py  test_skills_gen.py  test_worker.py  (+2 more)
(+196 files in other folders)
